Skill section add on hover

--- a/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.scss
+++ b/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.scss
@@ -1,69 +1,77 @@
-.skills{
-   background-color: var(--background);
-   text-align: center;
-   padding: 200px 350px 100px 350px;
+.skills {
+  background-color: var(--background);
+  text-align: center;
+  padding: 200px 350px 100px 350px;
 
-    h3{
-        font-size: 35px;
-        font-weight: 400;
-        color: var(--cream-500);
-        margin-bottom: 40px;
-    }
+  h3 {
+    font-size: 35px;
+    font-weight: 400;
+    color: var(--cream-500);
+    margin-bottom: 40px;
+  }
 
-    h1{
-        font-size: 70px;
-        color: var(--white);
-        margin-bottom: 60px;
-    }
+  h1 {
+    font-size: 70px;
+    color: var(--white);
+    margin-bottom: 60px;
+  }
 
-    .skill-level{
-       .skill-level-item{
-        margin-bottom: 70px;
+  .skill-level {
+    .skill-level-item {
+      margin-bottom: 70px;
 
-          .skill-title{
-            display: flex;
-            justify-content: space-between;
+      .skill-title {
+        display: flex;
+        justify-content: space-between;
 
-             p{
-                font-size: 24px;
-                font-weight: 400;
-                color: var(--cream-500);
-                margin-bottom: 30px;
-             }
-          }
-
-          .progress-bar{
-            background-color: var(--white); 
-
-            .progress{
-                background-color: var(--cream-500); 
-                height: 5px;
-            }
-
-            .persantage { 
-                width: 95%; 
-            } 
+        p {
+          font-size: 24px;
+          font-weight: 400;
+          color: var(--white);
+          margin-bottom: 30px;
         }
-       }
+      }
+
+      .progress-bar {
+        background-color: var(--white);
+
+        .progress {
+          background-color: var(--cream-500);
+          height: 5px;
+        }
+
+        .persantage {
+          width: 95%;
+        }
+      }
+
+      &:hover {
+        .skill-title {
+          p {
+            color: var(--cream-500);
+          }
+        }
+
+      }
     }
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .skills{
+  .skills {
+    text-align: center;
+    padding: 50px 20px;
 
-        text-align: center;
-        padding: 50px 20px;
-     
-         h3{
-             font-size: 24px;
- 
-             margin-bottom: 40px;
-         }
-     
-         h1{
-             font-size: 48px;
-             color: var(--white);
-             margin-bottom: 60px;
-         }
-     }
+    h3 {
+      font-size: 24px;
+
+      margin-bottom: 40px;
+    }
+
+    h1 {
+      font-size: 48px;
+      color: var(--white);
+      margin-bottom: 60px;
+    }
+  }
 }
