--- a/src/app/features/feature-portfolio/components/statistic/statistic.component.html
+++ b/src/app/features/feature-portfolio/components/statistic/statistic.component.html
@@ -8,19 +8,19 @@
   </div>
 </div> -->
 
-<div class="hero-statistic">
+<div class="hero-statistic" #statistic>
   <div class="hero-statistic-item">
-    <h1>20K</h1>
+    <h1>{{ projectCopiled }} K</h1>
     <p>Projects Complited</p>
    </div>
 
   <div class="hero-statistic-item">
-    <h1>10+</h1>
+    <h1>{{ experience }}+</h1>
     <p>Years of Experience</p>
   </div>
 
   <div class="hero-statistic-item">
-    <h1>8+</h1>
+    <h1>{{ awards }}+</h1>
     <p>Awards Achievement</p>
   </div>
 </div>  
