--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
@@ -1,12 +1,12 @@
 <div class="hero-section">
   <div class="description">
     <div class="name">
-      <h1>HI, I AM VASILE BADRAGAN</h1> 
+      <h1 class="type cursor">HI, I AM VASILE BADRAGAN</h1> 
       <div class="hero-name-line"></div> 
    </div>
    
    <div class="title">
-     <h1>A Software Engineer
+     <h1 class="fade-in-right-animation">A Software Engineer
        <!-- <span>
          <button class="title-play-button">
            <img src="assets/play.png" height="20px" width="15px">
@@ -16,7 +16,7 @@
    </div>
    
    <div class="subtitle">
-    <p>
+    <p class="fade-in-left-animation">
       With a passion for creating innovative solutions. 
       Analyzes user needs, designs, develops, and tests software using strong programming skills. 
       Thrives in a collaborative environment and brings a problem-solving mindset to every project.
@@ -24,7 +24,7 @@
    </div>
    
    <div class="download-cv">
-     <button matButton>
+     <button matButton (click)="downloadCv()">
       DOWNLOAND CV
       <mat-icon svgIcon="arrow-right"></mat-icon>
      </button>
