Dynamic popup message

--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
@@ -1,7 +1,7 @@
 <div class="hero-section">
   <div class="description">
     <div class="name">
-      <h1 class="type cursor">HI, I AM VASILE BADRAGAN</h1> 
+      <h1 class="type">HI, I AM VASILE BADRAGAN</h1> 
       <div class="hero-name-line"></div> 
    </div>
    
