--- a/src/app/features/feature-portfolio/components/statistic/statistic.component.html
+++ b/src/app/features/feature-portfolio/components/statistic/statistic.component.html
@@ -8,7 +8,7 @@
   </div>
 </div> -->
 
-<div class="hero-statistic" #statistic>
+<div class="hero-statistic">
   <div class="hero-statistic-item">
     <h1>{{ projectCopiled }} K</h1>
     <p>Projects Complited</p>
