Manage contact form

--- a/src/app/features/feature-portfolio/components/page-heading/page-heading.component.html
+++ b/src/app/features/feature-portfolio/components/page-heading/page-heading.component.html
@@ -28,9 +28,9 @@
 
 <div class="header">
   <div class="name">
-    <h1>{{ titleFormated }}</h1> 
+    <h1 class="type">{{ titleFormated }}</h1> 
     <div class="hero-name-line"></div> 
   </div>
 
-  <h2>{{ subtitle }}</h2>
+  <h2 class="fade-in-right-animation">{{ subtitle }}</h2>
 </div>
