--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -7,18 +7,34 @@
       matInput
       placeholder="Your Email Adress">
       <button matSuffix mat-icon-button aria-label="Clear">
-        <img src="assets/arrow-email-button.svg">
+        <mat-icon svgIcon="arrow-right"></mat-icon>
       </button>
   </div>
 
   <div class="footer-heading-right">
-    <img src="assets/social-media.svg">
+    <div class="social-media">
+      <div class="circle">
+        <mat-icon svgIcon="facebook"></mat-icon>
+      </div>
+      <div class="circle">
+        <mat-icon svgIcon="instagram"></mat-icon>
+      </div>
+      <div class="circle">
+        <mat-icon svgIcon="pinterest"></mat-icon>
+      </div>
+      <div class="circle">
+        <mat-icon svgIcon="tiktok"></mat-icon>
+      </div>
+      <div class="circle">
+        <mat-icon svgIcon="linkedin"></mat-icon>
+      </div>
+    </div>
     
     <h1>STAY CONNECTED</h1>
 
-    <span><img src="assets/address-icon.svg"> Chisinau, Moldova</span>
-    <span><img src="assets/phone-icon.svg"> +373-695-63326</span>
-    <span><img src="assets/email-icon.svg"> best.developer@dev.com</span>
+    <span><mat-icon svgIcon="address-icon"></mat-icon> Chisinau, Moldova</span>
+    <span><mat-icon svgIcon="phone-icon"></mat-icon>+373-695-63326</span>
+    <span><mat-icon svgIcon="email-icon"></mat-icon> best.developer@dev.com</span>
   </div>
 </div>
 
