--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -6,7 +6,8 @@
     
     &-heading{
         color: var(--white);
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         padding-top: 20px;
         margin-bottom: 60px;
 
@@ -42,13 +43,34 @@
                 height: 25px;
             }
         }
+
+        button:hover{
+            opacity: 0.9;
+        }
     }
 
     .footer-heading-right{
         display: block;
-        width: 80%;
         padding-left: 100px;
         padding-bottom: 30px;
+        width: 100%;
+
+        .social-media{
+            display: flex;
+            justify-content: space-between;
+            //width: 25rem;
+            //min-width: 10rem;
+
+            .circle{
+                display: flex;
+                width: 40px;
+                height: 40px;
+                border: solid 2px white;
+                border-radius: 50%;
+                align-items: center;
+                padding-left: 6px;
+            }
+        }
 
         h1{
             font-size: 24px;   
@@ -58,15 +80,15 @@
         }
 
         span{
-            display: block;
+            display: flex;
             font-size: 16px;
             font-weight: 200;
             margin-top: 20px;
+            align-items: center;
 
-            img{
+            mat-icon{
                 width: 30px;
                 height: 30px;
-                margin-bottom: -5px;
                 margin-right: 10px;
             }
         } 
@@ -101,7 +123,7 @@
         padding: 50px 20px;
         
         &-heading{
-            display: grid;
+            grid-template-columns: 1fr;
             padding-top: 20px;
             margin-bottom: 30px;
     
