Add scroll service and animate statisctic on view scroll

--- a/src/app/features/feature-portfolio/pages/home-page/home-page.component.html
+++ b/src/app/features/feature-portfolio/pages/home-page/home-page.component.html
@@ -1,7 +1,9 @@
-<div class="home-page">
-    <app-hero-section></app-hero-section> 
+<div class="home-page"> 
+   <app-hero-section></app-hero-section> 
     
-    <app-statistic></app-statistic>
+    <div #statistic>
+        <app-statistic></app-statistic>
+    </div>
   
     <app-resume-section></app-resume-section>
 
