--- a/src/app/features/feature-portfolio/pages/home-page/home-page.component.html
+++ b/src/app/features/feature-portfolio/pages/home-page/home-page.component.html
@@ -5,13 +5,23 @@
         <app-statistic></app-statistic>
     </div>
   
-    <app-resume-section></app-resume-section>
+    <div #resumeSection>
+        <app-resume-section></app-resume-section>
+    </div>
 
-    <app-portfolio-section></app-portfolio-section>
+    <div #portfolioSection>
+        <app-portfolio-section></app-portfolio-section>
+    </div>
 
-    <app-service-section></app-service-section>
+    <div #serviceSection>
+        <app-service-section></app-service-section>
+    </div>
 
-    <app-testimonial-section></app-testimonial-section>
+    <div #testimonialSection>
+        <app-testimonial-section></app-testimonial-section>
+    </div>
 
-    <app-blog-section></app-blog-section>
+    <div #blogSection>
+        <app-blog-section></app-blog-section>
+    </div>
 </div>
