Add lazy loading

--- a/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.html
@@ -2,7 +2,7 @@
     <div class="resume-content">
       <div class="resume-photo-section">
          <div class="photo">
-           <img src="assets/images/about-me.jpg">
+           <img src="assets/images/about-me.jpg" alt="img" loading="lazy">
          </div>
          <div class="details">
             <h1>HI, I AM VASILE BADRAGAN A SOFTWARE ENGINEER</h1>
@@ -32,7 +32,7 @@
   
             <div class="work-progress-button">
               <button>MY WORK PROGRESS 
-                <img src="assets/play-grey.png">
+                <img src="assets/play-grey.png" alt="img" loading="lazy">
               </button>
             </div>
          </div>
