--- a/src/app/features/feature-portfolio/components/about/about-me-section/about-me-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/about-me-section/about-me-section.component.html
@@ -4,7 +4,7 @@
 
   <div class="content-container">
      <div class="photo-content">
-        <img src="assets/images/blog-1.jpg"> 
+        <img src="assets/images/blog-1.jpg" alt="img" loading="lazy"> 
      </div>
 
      <div class="description">
