--- a/src/app/features/feature-portfolio/components/blog-section/blog-section.component.html
+++ b/src/app/features/feature-portfolio/components/blog-section/blog-section.component.html
@@ -7,7 +7,7 @@
 
   <div class="content">
     <div class="photo-container">
-      <img src="assets/images/blog-1.jpg">
+      <img src="assets/images/blog-1.jpg" alt="img" loading="lazy">
        <div class="date-container">
         <p>30 December 2023</p>
       </div> 
@@ -19,7 +19,7 @@
 
     <div class="photo-container">
       <div class="photo-inner-container">
-        <img src="assets/images/blog-2.jpg">
+        <img src="assets/images/blog-2.jpg" alt="img" loading="lazy">
         <div class="date-container">
           <p>30 December 2023</p>
         </div>
@@ -29,7 +29,7 @@
         </div> 
       </div>
       <div class="photo-inner-container">
-        <img src="assets/images/blog-3.jpg">
+        <img src="assets/images/blog-3.jpg" alt="img" loading="lazy">
         <div class="date-container">
           <p>30 December 2023</p>
         </div>
@@ -41,7 +41,7 @@
     </div>
 
     <div class="photo-container">
-      <img src="assets/images/blog-4.jpg">
+      <img src="assets/images/blog-4.jpg" alt="img" loading="lazy">
       <div class="date-container">
         <p>30 December 2023</p>
       </div>
