--- a/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.html
+++ b/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.html
@@ -5,9 +5,9 @@
   <ng-container *ngFor="let testimonial of testimonials; let index = index">
     <div class="testimonial-card" *ngIf="index === currentSlide">
       <div class="image">
-        <img src="{{ testimonial.image }}">
+        <img src="{{ testimonial.image }}" alt="img" loading="lazy">
       </div>
-      <img class="sparks" src="assets/sparks-ornament.png" width="60px" height="60px">
+      <img class="sparks" src="assets/sparks-ornament.png" width="60px" height="60px" alt="img" loading="lazy">
       <div class="details">
         <p>{{ testimonial.description }}</p>
         <div class="pearson">
@@ -19,11 +19,11 @@
           <div class="vertical-line"></div>
 
           <div class="rating">
-           <img src="assets/star.png" width="22.66px" height="19.66px">
-           <img src="assets/star.png" width="22.66px" height="19.66px">
-           <img src="assets/star.png" width="22.66px" height="19.66px">
-           <img src="assets/star.png" width="22.66px" height="19.66px">
-           <img src="assets/star.png" width="22.66px" height="19.66px">
+           <img src="assets/star.png" width="22.66px" height="19.66px" alt="img" loading="lazy">
+           <img src="assets/star.png" width="22.66px" height="19.66px" alt="img" loading="lazy">
+           <img src="assets/star.png" width="22.66px" height="19.66px" alt="img" loading="lazy">
+           <img src="assets/star.png" width="22.66px" height="19.66px" alt="img" loading="lazy">
+           <img src="assets/star.png" width="22.66px" height="19.66px" alt="img" loading="lazy">
            <p>5.0/5.0</p>
          </div>
         </div>
@@ -39,17 +39,17 @@
   
         <div class="hero-details">
          <div class="hero-photo">
-           <img src="{{ testimonial.image }}">
+           <img src="{{ testimonial.image }}" alt="img" loading="lazy">
            <div class="hero-name">
             <h5>{{ testimonial.name }}</h5>
             <p>{{ testimonial.position }}</p>
   
             <div class="rating">
-              <img src="assets/star.png">
-              <img src="assets/star.png">
-              <img src="assets/star.png">
-              <img src="assets/star.png">
-              <img src="assets/star.png">
+              <img src="assets/star.png" alt="img" loading="lazy">
+              <img src="assets/star.png" alt="img" loading="lazy">
+              <img src="assets/star.png" alt="img" loading="lazy">
+              <img src="assets/star.png" alt="img" loading="lazy">
+              <img src="assets/star.png" alt="img" loading="lazy">
               <p>5.0/5.0</p>
              </div>
            </div>
