--- a/src/app/features/feature-portfolio/components/about/partner-section/partner-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/partner-section/partner-section.component.html
@@ -1,12 +1,20 @@
 <div class="partner">
   <h1>Over 200+ Global Clients</h1>
 
-  <div class="partner-logo">
+  <div class="partners">
+   <div class="partners-logo">
     <mat-icon svgIcon="partner-icon"></mat-icon>
     <mat-icon svgIcon="partner-icon"></mat-icon>
     <mat-icon svgIcon="partner-icon"></mat-icon>
     <mat-icon svgIcon="partner-icon"></mat-icon>
     <mat-icon svgIcon="partner-icon"></mat-icon>
     <mat-icon svgIcon="partner-icon"></mat-icon>
+    <mat-icon svgIcon="partner-icon"></mat-icon>
+    <mat-icon svgIcon="partner-icon"></mat-icon>
+    <mat-icon svgIcon="partner-icon"></mat-icon>
+    <mat-icon svgIcon="partner-icon"></mat-icon>
+    <mat-icon svgIcon="partner-icon"></mat-icon>
+    <mat-icon svgIcon="partner-icon"></mat-icon>
+   </div>
   </div>
 </div>
