--- a/src/app/features/feature-portfolio/components/resume/resume-awards-section/resume-awards-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-awards-section/resume-awards-section.component.html
@@ -37,7 +37,7 @@
 
 
   <div class="awards-navigation">
-    <button class="slide-button" matButton (click)="goToPrevious(-1)">
+    <button class="slide-button" matButton (click)="goToPrevious()">
       <mat-icon svgIcon="chevron-left"></mat-icon>
       <mat-icon svgIcon="chevron-left"></mat-icon>
       <span>PREVIOUS</span>
@@ -49,7 +49,7 @@
      <p>0{{ awards.length }}</p>
     </div>
  
-    <button class="slide-button second-slide-button" matButton (click)="goToNext(-1)">
+    <button class="slide-button second-slide-button" matButton (click)="goToNext()">
      <span>NEXT</span>
      <mat-icon svgIcon="chevron-right"></mat-icon>
      <mat-icon svgIcon="chevron-right"></mat-icon>
