--- a/src/app/features/feature-portfolio/pages/single-portfolio-page/single-portfolio-page.component.html
+++ b/src/app/features/feature-portfolio/pages/single-portfolio-page/single-portfolio-page.component.html
@@ -32,33 +32,34 @@
         <div class="overview">
             <h1>Overview</h1>
             <p>
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-                took a galley of type and scrambled it to make a type specimen book.
+                The project features a responsive and user-friendly interface, enabling seamless browsing, product searches, and a smooth checkout process. 
+                I implemented key functionalities like secure user authentication, payment gateway integration, and dynamic product listings. 
+                The platform is designed to be scalable and optimized for performance, ensuring a fast and efficient shopping experience across devices.
             </p>
             <div class="highlight">
                 <div class="highlight-item">
                     <mat-icon svgIcon="radio-button-icon"></mat-icon>
-                    <p>Advantage</p>
+                    <p>SEO-Friendly</p>
                 </div>
                 <div class="highlight-item">
                     <mat-icon svgIcon="radio-button-icon"></mat-icon>
-                    <p>Advantage</p>
+                    <p>Customizability</p>
                 </div>
                 <div class="highlight-item">
                     <mat-icon svgIcon="radio-button-icon"></mat-icon>
-                    <p>Advantage</p>
+                    <p>Improved User Experience</p>
                 </div>
                 <div class="highlight-item">
                     <mat-icon svgIcon="radio-button-icon"></mat-icon>
-                    <p>Advantage</p>
+                    <p>Component-Based Architecture</p>
                 </div>
             </div>
         </div>
         <div class="typography">
             <h1>Typography</h1>
             <p>
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
-                took a galley of type and scrambled it to make a type specimen book.
+                Typography in web design is essential for creating a clear, readable, and visually appealing experience for users.
+                Choosing the right fonts and font sizes is key to guiding customers through the website.
             </p>
             <div class="typography-inner-container">
                 <div class="typography-inner-item">
@@ -79,8 +80,7 @@
     <div class="conclusion">
         <h1>Conclusion</h1>
         <p>
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-            galley of type and scrambled it to make a type specimen book.
+            The project demonstrates my ability to build robust, scalable, and intuitive eCommerce solutions with modern web technologies, offering an excellent user experience while meeting business needs.
         </p>
     </div>
 
