--- a/src/app/features/feature-portfolio/components/page-heading/page-heading.component.html
+++ b/src/app/features/feature-portfolio/components/page-heading/page-heading.component.html
@@ -28,7 +28,7 @@
 
 <div class="header">
   <div class="name">
-    <h1 class="fade-in-right-animation">{{ titleFormated }}</h1> 
+    <h1>{{ titleFormated }}</h1> 
     <div class="hero-name-line"></div> 
   </div>
 
