Update portfolio images

--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class="image">
-    <img src="assets/images/hero-image-removebg-preview.png" alt="image" loading="lazy">
+    <img src="assets/images/hero.png" alt="image" loading="lazy">
   </div>
 
   <app-chess-background></app-chess-background>
